--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@1inch/cross-chain-sdk",
-  "version": "0.1.15-rc.0",
+  "name": "@nikhil0341/cross-chain-sdk",
+  "version": "0.1.15-rc.2",
   "description": "Sdk for creating atomic swaps through 1inch",
   "author": "@1inch",
   "module": "./dist/esm/index.js",
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "ssh://git@github.com:1inch/cross-chain-sdk.git"
+    "url": "ssh://git@github.com:ArbMon-Fusion/cross-chain-sdk.git"
   },
   "scripts": {
     "build": "npm run build:esm && npm run build:cjs && npm run build:types",
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@1inch/byte-utils": "2.6.0",
-    "@1inch/fusion-sdk": "file:../Fusion_Sdk",
+    "@nikhil0341/fusion-sdk":"2.1.11-rc.2",
     "@openzeppelin/merkle-tree": "1.0.7",
     "axios": "1.8.2",
     "ecies-25519": "1.3.1",
